# lab1_arquitectura

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  imageinfo.cpp  imageinfo.hpp  interpolation.cpp  interpolation.hpp  progargs.cpp  progargs.hpp
ftest-aos/: CMakeLists.txt  aos_compress_ftests.sh  aos_cutfreq_ftests.sh  aos_maxlevel_ftests.sh  aos_resize_ftests.sh  imtool_aos_ftest.cpp
ftest-soa/: CMakeLists.txt  imtool_soa_ftest.cpp  soa_compress_ftests.sh  soa_cutfreq_ftests.sh  soa_maxlevel_ftests.sh  soa_resize_ftests.sh
imgaos/: CMakeLists.txt  color.cpp  color.hpp  command_handlers.cpp  command_handlers.hpp  imageaos.cpp  imageaos.hpp
imgsoa/: CMakeLists.txt  color.cpp  color.hpp  command_handlers.cpp  command_handlers.hpp  imagesoa.cpp  imagesoa.hpp
imtool-aos/: CMakeLists.txt  main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
output/: mioutput.ppm
utest-common/: CMakeLists.txt  binaryio_test.cpp  imageinfo_test.cpp  progargs_test.cpp
utest-img-aos/: CMakeLists.txt  color_test.cpp  command_handlers_test.cpp  imageaos_test.cpp
utest-img-soa/: CMakeLists.txt  color_test.cpp  imagesoa_test.cpp
